# real-estate-agent

./: .dockerignore  .env.example  AGENT.md  AGENT_TRACKING.md  Dockerfile  README.md  SKILLS.md  agent.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  schema.sql
app/: __init__.py  main.py
app/api/routes/: dashboard.py  health.py  leads.py  properties.py  webhooks.py
app/core/: config.py
app/schemas/: __init__.py  leads.py  properties.py
app/services/: agent.py  channels.py  chat_memory.py  prompt.py  tools.py  twilio_channel.py
db/: schema.sql
docs/: AGENT.md  AGENT_TRACKING.md  SKILLS.md
scripts/: register_telegram_webhook.sh
